#63 - refactor UseCase before service, map new services to foster reuse